--- a/greengoods.html
+++ b/greengoods.html
@@ -8,11 +8,6 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
         <p class="center">Wat maakt Delicious Food duurzaam? Laten we kijken naar de producten die ze aanbieden.</p>
@@ -31,6 +26,14 @@
             </article>
         </section>
     </main>
+    <nav class="bottom-navigation">
+        <ul>
+            <li><a href="index.html"><img src="images/homeicon.svg" alt="Home"></a></li>
+            <li><a href="delicious.html"><img src="images/deliciousfoodicon.svg" alt="Delicious Food"></a></li>
+            <li><a href="greengoods.html"><img src="images/goodsgalleryicon.svg" alt="Green Goods Gallery"></a></li>
+            <li><a href="greentalk.html"><img src="images/greentalkicon.svg" alt="Green Talk"></a></li>
+        </ul>
+    </nav>
     <footer>
         <p>Made by Audrey Gabrielle Widjaja.</p>
         <p>Copyright © 2023</p>
