--- a/greentalk.html
+++ b/greentalk.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
         <p class="center">Mijn persoonlijke review: wat vind ik van dit duurzaam initiatief?</p>
     </main>
+    <nav class="bottom-navigation">
+        <ul>
+            <li><a href="index.html"><img src="images/homeicon.svg" alt="Home"></a></li>
+            <li><a href="delicious.html"><img src="images/deliciousfoodicon.svg" alt="Delicious Food"></a></li>
+            <li><a href="greengoods.html"><img src="images/goodsgalleryicon.svg" alt="Green Goods Gallery"></a></li>
+            <li><a href="greentalk.html"><img src="images/greentalkicon.svg" alt="Green Talk"></a></li>
+        </ul>
+    </nav>
     <footer>
         <p>Made by Audrey Gabrielle Widjaja.</p>
         <p>Copyright © 2023</p>
