--- a/delicious.html
+++ b/delicious.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/greengroceriesicon.svg">
     </header>
     <main>
         <h2>Een kijkje door Delicious Food</h2>
