--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="images/greengroceriesicon.svg">
     </header>
     <main>
         <h1 class="center">Welkom</h1>
