--- a/greengoods.html
+++ b/greengoods.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header>
+        <img src="images/greengroceriesicon.svg">
     </header>
     <main>
+        <h2>Green Goods Gallery</h2>
         <p class="center">Wat maakt Delicious Food duurzaam? Laten we kijken naar de producten die ze aanbieden.</p>
         <section>
             <article>
@@ -23,6 +25,22 @@
             <article>
                 <img src="images/goodie3.jpeg" alt="uwa" class="goodsimage">
                 <p>muauhahahaa</p>
+            </article>
+            <article>
+                <img src="images/goodie4.jpeg" alt="jaaa" class="goodsimage">
+                <p>muahahahaha</p>
+            </article>
+            <article>
+                <img src="images/goodie5.jpeg" alt="Koffie" class="goodsimage">
+                <p>aahahahahaha</p>
+            </article>
+            <article>
+                <img src="images/showcase1.jpeg" alt="ahaa" class="goodsimage">
+                <p>ahahahahahah</p>
+            </article>
+            <article>
+                <img src="images/goodie6.jpeg" alt="ahaaaaaaa" class="goodsimage">
+                <p>muaaaahaaha</p>
             </article>
         </section>
     </main>
