--- a/greentalk.html
+++ b/greentalk.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <header>
+        <img src="images/greengroceriesicon.svg">
     </header>
     <main>
+        <h2>Green Talk</h2>
         <p class="center">Mijn persoonlijke review: wat vind ik van dit duurzaam initiatief?</p>
+        <img class="inline-image" src="images/greentalkextra.svg">
+        <p class="inline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam debitis esse magni blanditiis ipsam consectetur odit iure non labore qui libero quam deleniti culpa ad officiis molestias, minima aliquam a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, sunt! Ipsa quibusdam omnis quisquam repellat fuga eaque sed repudiandae neque quidem nobis nam, fugit laborum, illo, voluptatibus error excepturi ipsum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed assumenda ex porro distinctio in quae nulla blanditiis odit laboriosam praesentium corrupti excepturi, provident tempora temporibus iste voluptatem officia magni aperiam.</p>
     </main>
     <nav class="bottom-navigation">
         <ul>
