--- a/delicious.html
+++ b/delicious.html
@@ -8,35 +8,37 @@
 </head>
 <body>
     <header>
-        <img src="images/greengroceriesicon.svg">
+        <img src="images/greengroceriesicon.svg" alt="Green Groceries Icon">
+        <h1>Delicious Food</h1>
+        <h2>Boodschappen doen kan altijd groen.</h2>
     </header>
     <main>
         <h2>Een kijkje door Delicious Food</h2>
-        <p class="center">Delicious Food is een speciale biologische supermarkt en delicatessenwinkel. In de winkel vind je volop biologisch voedsel, ingrediënten, wijnen en bieren. Elke dag worden er verse producten rechtstreeks uit de keuken aangeboden. Je kunt zelfs je eigen ingrediënten tappen. Scroll gerust naar beneden om een kijkje te nemen in Delicious Food!</p>
+        <p class="center">Delicious Food is een speciale biologische supermarkt en delicatessenwinkel. In de winkel vind je volop biologisch voedsel, ingrediënten, wijnen en bieren. Elke dag worden er verse producten rechtstreeks uit de keuken aangeboden. Je kunt zelfs je eigen ingrediënten tappen. Scroll gerust naar beneden om een kijkje te nemen bij Delicious Food!</p>
         <ul class="delicious-list">
             <li>
                 <img src="images/showcase1.jpeg" alt="Ingrediënten Tappen Sectie">
-                <p>Hierboven zie je...</p>
+                <p>Het moment dat je de winkel binnenloopt, vind je aan de rechterkant rijen met dispensers. Deze zijn gevuld met een gevarieerde selectie van biologische ingrediënten, zoals kruiden, knapperige noten, en diverse soorten bonen. Klanten worden aangemoedigd om hun eigen herbruikbare zakken mee te nemen om deze biologische lekkernijen te kopen.</p>
             </li>
             <li>
                 <img src="images/showcase2.jpeg" alt="Wijn Sectie">
-                <p>Voor de wijn liefhebbers...</p>
+                <p>In de winkel vind je een speciaal gedeelte waar je een assortiment biologische wijnen, bieren, likeuren en sterke dranken kunt vinden. Zo kun je als liefhebber van alcohol ook nog eens duurzaam drinken!</p>
             </li>
             <li>
                 <img src="images/showcase3.jpeg" alt="Thee Drank Sectie">
-                <p>Naast de wijn sectie bevindt zich ook een plek voor de thee liefhebbers.</p>
+                <p>Naast de wijnsectie vind je een sectie met verschillende soorten biologische thee. Hiermee kun je als theeliefhebber genieten en tegelijkertijd milieubewust zijn.</p>
             </li>
             <li>
                 <img src="images/showcase4.jpeg" alt="Keuken">
-                <p>Achterin de winkel bevindt zich de keuken.</p>
+                <p>Achterin de winkel bevindt zich de keuken, waar dagelijks verse producten worden bereid zoals brood en gebakjes. Bovendien worden er ook nog verpakte producten aangeboden zoals biologische eieren en soep.</p>
             </li>
             <li>
-                <img src="images/showcase5.jpeg" alt="Bakkerij">
-                <p>Voorin de winkel vind je de brood en gebak sectie.</p>
+                <img src="images/showcase5.jpeg" alt="Brood en Gebak Sectie">
+                <p>Aan de voorkant van de winkel bevindt zich de plek waar je verse, huisgemaakte lekkernijen kunt vinden, waaronder vegan koeken, versgebakken brood en nog veel meer. Zo kunnen klanten snel en gemakkelijk genieten van een klein, smakelijk hapje.</p>
             </li>
             <li>
-                <img src="images/showcase6.jpeg" alt="Zich vanaf buiten">
-                <p>Zo zie je dat het niet alleen duurzaam, maar ook een knusse plek is.</p>
+                <img src="images/showcase6.jpeg" alt="Foto van de Winkel">
+                <p>In de winkel hangt een warme en verwelkomende sfeer. Klanten komen hier niet alleen om hun dagelijkse boodschappen te doen, maar ook om te genieten van heerlijke hapjes. Wat deze ervaring nog specialer maakt, is dat de hele winkel zich inzet voor milieubewust winkelen, met een assortiment dat volledig bestaat uit biologische producten.</p>
             </li>
         </ul>
     </main>
