--- a/greengoods.html
+++ b/greengoods.html
@@ -8,39 +8,41 @@
 </head>
 <body>
     <header>
-        <img src="images/greengroceriesicon.svg">
+        <img src="images/greengroceriesicon.svg" alt="Green Groceries Icon">
+        <h1>Green Goods Gallery</h1>
+        <h2>Boodschappen doen kan altijd groen.</h2>
     </header>
     <main>
-        <h2>Green Goods Gallery</h2>
-        <p class="center">Wat maakt Delicious Food duurzaam? Laten we kijken naar de producten die ze aanbieden.</p>
+        <h2>Producten met Impact</h2>
+        <p class="center">Wat Delicious Food zo speciaal maakt, is de algehele nadruk op duurzaamheid in de hele winkel. Scroll verder om te lezen wat de producten van Delicious Food duurzaam maakt!</p>
         <section>
             <article>
                 <img src="images/goodie1.jpeg" alt="uhhh" class="goodsimage">
-                <p>muahahaha</p>
+                <p>Schoonmaakmiddelen zoals zeep en wasmiddel, gemaakt met biologisch afbreekbare ingrediënten.</p>
             </article>
             <article>
                 <img src="images/goodie2.jpeg" alt="bla" class="goodsimage">
-                <p>muahaahahha</p>
+                <p>Al het fruit is biologisch, en ondersteunt gezonde landbouwpraktijken en biodiversiteit.</p>
             </article>
             <article>
                 <img src="images/goodie3.jpeg" alt="uwa" class="goodsimage">
-                <p>muauhahahaa</p>
+                <p>Alle alcoholische dranken zijn biologisch, waardoor het gebruik van toxische stoffen wordt geminimaliseerd.</p>
             </article>
             <article>
                 <img src="images/goodie4.jpeg" alt="jaaa" class="goodsimage">
-                <p>muahahahaha</p>
+                <p>De handgemaakte wierookproducten minimaliseren de ecologische voetafdruk door het gebruik van duurzame materialen en methoden.</p>
             </article>
             <article>
                 <img src="images/goodie5.jpeg" alt="Koffie" class="goodsimage">
-                <p>aahahahahaha</p>
+                <p>Met de zelfbediening-koffiemolen verminder je onnodige verpakking en verspilling van voorverpakte koffie.</p>
             </article>
             <article>
                 <img src="images/showcase1.jpeg" alt="ahaa" class="goodsimage">
-                <p>ahahahahahah</p>
+                <p>De zelftap-sectie vermindert onnodig verpakkingsafval en stimuleert het gebruik van herbruikbare containers.</p>
             </article>
             <article>
                 <img src="images/goodie6.jpeg" alt="ahaaaaaaa" class="goodsimage">
-                <p>muaaaahaaha</p>
+                <p>Biologisch ijs (Ja, zelfs ijs kan je duurzamer eten) is duurzaam doordat het gemaakt is van biologische ingrediënten zonder schadelijke kunstmatige stoffen.</p>
             </article>
         </section>
     </main>
