--- a/greentalk.html
+++ b/greentalk.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
-        <img src="images/greengroceriesicon.svg">
+        <img src="images/greengroceriesicon.svg" alt="Green Groceries Icon">
+        <h1>Green Talk</h1>
+        <h2>Boodschappen doen kan altijd groen.</h2>
     </header>
     <main>
-        <h2>Green Talk</h2>
-        <p class="center">Mijn persoonlijke review: wat vind ik van dit duurzaam initiatief?</p>
-        <img class="inline-image" src="images/greentalkextra.svg">
-        <p class="inline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam debitis esse magni blanditiis ipsam consectetur odit iure non labore qui libero quam deleniti culpa ad officiis molestias, minima aliquam a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, sunt! Ipsa quibusdam omnis quisquam repellat fuga eaque sed repudiandae neque quidem nobis nam, fugit laborum, illo, voluptatibus error excepturi ipsum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed assumenda ex porro distinctio in quae nulla blanditiis odit laboriosam praesentium corrupti excepturi, provident tempora temporibus iste voluptatem officia magni aperiam.</p>
+        <h2>Vanuit mijn perspectief</h2>
+        <p class="center">Graag wil ik met ieder die dit leest delen wat ik persoonlijk vind van dit duurzaam initatief, en hoe ik denk dat het een verandering kan maken voor de aarde.</p>
+        <img class="inline-image" src="images/greentalkextra.svg" alt="Spraakpersoon Image">
+        <p class="inline-text">Ik wil beginnen met te zeggen dat Delicious Food niet alleen een positieve impact heeft op het milieu, maar ook op mij persoonlijk. Ik had nog nooit eerder een winkel gezien die volledig biologisch is en zo toegewijd is aan het beschermen van het milieu. Het heeft me echt aan het denken gezet over de keuzes die ik maak wanneer ik boodschappen doe. Elk product in de winkel is een bewuste, milieuvriendelijke keuze voor de klant. Ik ben ervan overtuigd dat ik niet de enige klant ben die is aangemoedigd om bewuster te winkelen. Ik hoop oprecht dat iedereen die dit leest, ook naar hun eigen milieubewustzijn kijkt en duurzamere keuzes maakt in hun dagelijks leven. Door winkels zoals Delicious Food te bezoeken, kunnen we allemaal een stap dichterbij een duurzamere wereld zetten. Het begint allemaal bij jou! </p>
     </main>
     <nav class="bottom-navigation">
         <ul>
