--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header>
-        <img src="images/greengroceriesicon.svg">
+        <img src="images/greengroceriesicon.svg" alt="Green Groceries Icon">
+        <h1>Green Groceries</h1>
+        <h2>Boodschappen doen kan altijd groen.</h2>
     </header>
     <main>
-        <h1 class="center">Welkom</h1>
+        <h2 class="center">Welkom</h2>
         <p class="center">Welkom bij Green Groceries. Deze website biedt een persoonlijke blik op Delicious Food, de duurzame supermarkt in Amsterdam's Westerstraat. Ik hoop de bewustwording en motivatie van elke lezer te vergroten voor een duurzamere toekomst. Laten we samen ontdekken waarom dit initiatief zo belangrijk is voor onze kostbare wereld. ♥</p>
         <nav class="center">
             <ul>
