--- a/greengoods.html
+++ b/greengoods.html
@@ -17,31 +17,31 @@
         <p class="center">Wat Delicious Food zo speciaal maakt, is de algehele nadruk op duurzaamheid in de hele winkel. Scroll verder om te lezen wat de producten van Delicious Food duurzaam maakt!</p>
         <section>
             <article>
-                <img src="images/goodie1.jpeg" alt="uhhh" class="goodsimage">
+                <img src="images/goodie1.jpeg" alt="Schoonmaakmiddelen" class="goodsimage">
                 <p>Schoonmaakmiddelen zoals zeep en wasmiddel, gemaakt met biologisch afbreekbare ingrediënten.</p>
             </article>
             <article>
-                <img src="images/goodie2.jpeg" alt="bla" class="goodsimage">
+                <img src="images/goodie2.jpeg" alt="Fruit sectie" class="goodsimage">
                 <p>Al het fruit is biologisch, en ondersteunt gezonde landbouwpraktijken en biodiversiteit.</p>
             </article>
             <article>
-                <img src="images/goodie3.jpeg" alt="uwa" class="goodsimage">
+                <img src="images/goodie3.jpeg" alt="Biologische Alcohol" class="goodsimage">
                 <p>Alle alcoholische dranken zijn biologisch, waardoor het gebruik van toxische stoffen wordt geminimaliseerd.</p>
             </article>
             <article>
-                <img src="images/goodie4.jpeg" alt="jaaa" class="goodsimage">
+                <img src="images/goodie4.jpeg" alt="Wierookproducten" class="goodsimage">
                 <p>De handgemaakte wierookproducten minimaliseren de ecologische voetafdruk door het gebruik van duurzame materialen en methoden.</p>
             </article>
             <article>
-                <img src="images/goodie5.jpeg" alt="Koffie" class="goodsimage">
+                <img src="images/goodie5.jpeg" alt="Koffiemolen" class="goodsimage">
                 <p>Met de zelfbediening-koffiemolen verminder je onnodige verpakking en verspilling van voorverpakte koffie.</p>
             </article>
             <article>
-                <img src="images/showcase1.jpeg" alt="ahaa" class="goodsimage">
+                <img src="images/showcase1.jpeg" alt="Ingrediënten dispensers" class="goodsimage">
                 <p>De zelftap-sectie vermindert onnodig verpakkingsafval en stimuleert het gebruik van herbruikbare containers.</p>
             </article>
             <article>
-                <img src="images/goodie6.jpeg" alt="ahaaaaaaa" class="goodsimage">
+                <img src="images/goodie6.jpeg" alt="Biologisch ijs" class="goodsimage">
                 <p>Biologisch ijs (Ja, zelfs ijs kan je duurzamer eten) is duurzaam doordat het gemaakt is van biologische ingrediënten zonder schadelijke kunstmatige stoffen.</p>
             </article>
         </section>
