--- a/greentalk.html
+++ b/greentalk.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <h2>Vanuit mijn perspectief</h2>
-        <p class="center">Graag wil ik met ieder die dit leest delen wat ik persoonlijk vind van dit duurzaam initatief, en hoe ik denk dat het een verandering kan maken voor de aarde.</p>
+        <p class="center">Graag wil ik met ieder die dit leest delen wat ik persoonlijk vind van dit duurzame initiatief, en hoe we samen een verandering kunnen maken voor de aarde.</p>
         <img class="inline-image" src="images/greentalkextra.svg" alt="Spraakpersoon Image">
         <p class="inline-text">Ik wil beginnen met te zeggen dat Delicious Food niet alleen een positieve impact heeft op het milieu, maar ook op mij persoonlijk. Ik had nog nooit eerder een winkel gezien die volledig biologisch is en zo toegewijd is aan het beschermen van het milieu. Het heeft me echt aan het denken gezet over de keuzes die ik maak wanneer ik boodschappen doe.</p>
         <p class="inline-text">Elk product in de winkel is een bewuste, milieuvriendelijke keuze voor de klant. Ik ben ervan overtuigd dat ik niet de enige klant ben die is aangemoedigd om bewuster te winkelen. Ik hoop oprecht dat iedereen die dit leest, ook naar hun eigen milieubewustzijn kijkt en duurzamere keuzes maakt in hun dagelijks leven. Door winkels zoals Delicious Food te bezoeken, kunnen we allemaal een stap dichterbij een duurzamere wereld zetten. Het begint allemaal bij jou!</p>
